# avero

./: .gitignore  README.md
.claude/: CLAUDE.MD
.claude/skills/design/: SKILL.md
.claude/skills/palette/: SKILL.md
backend/: .fastapicloudignore  README.md  pyproject.toml
backend/src/: agent.py  config.py  llm.py  main.py  prompt.py  schemas.py  tools.py
backend/src/docs/: rag.md
backend/src/rag/: index_avreo.py  retriever.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: chat.js
frontend/src/components/AINative/: AINative.jsx  index.js
frontend/src/components/Boarding/: Boarding.jsx
frontend/src/components/ChatWidget/: ChatWidget.jsx
frontend/src/components/Contact/: Contact.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/Hero/: Hero.jsx
frontend/src/components/HeroBackground/: HeroBackground.jsx
frontend/src/components/JetstarPrinciple/: JetstarPrinciple.jsx  index.js
frontend/src/components/Navbar/: Navbar.jsx
frontend/src/components/OurApproach/: OurApproach.jsx  index.js
frontend/src/components/ShinyButton/: ShinyButton.css  ShinyButton.jsx  index.js
frontend/src/components/ShinyText/: ShinyText.jsx
frontend/src/components/SuccessStories/: SuccessStories.jsx
frontend/src/components/TheShift/: TheShift.jsx  index.js
frontend/src/components/WhyNow/: CockpitPanel.jsx  WhyNow.jsx
frontend/src/utils/: preloadAssets.js  scrollToSection.js
(+4 files in other folders)
